# tripcraft

./: .gitmodules  LICENSE  Makefile  README.md  docker-compose.yaml
database/: Dockerfile  docker-entrypoint.sh
portal/: Makefile  index.html  package.json
portal/public/: config.local.js
portal/src/: App.tsx  AppRoutes.ts  config.ts
portal/src/components/: DateRangeCalendar.tsx  LoginModal.tsx  ProtectedScreenLayout.tsx  ScreenLayout.tsx  SignupModal.tsx
portal/src/i18n/: i18n.ts  locale.ts
portal/src/models/: api.ts
portal/src/providers/: ApiClientProvider.tsx  AppLocaleProvider.tsx  AppModalProvider.tsx  AppQueryClientProvider.tsx  AppRouterProvider.tsx  AuthProvider.tsx
portal/src/queries/: useMutateAuthLogin.tsx  useMutateAuthSignup.tsx  useMutatePlan.tsx  useQueryPlans.tsx  (+3 more)
server/: .env.example  Dockerfile  Dockerfile.dev  Makefile  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 587b3159a5fb_create_user_table.py  84400330e2b9_create_plan_table.py  885f18ec1430_create_auth_table.py  c3ec78c03f0b_index_world_data.py
server/tripcraft/: constants.py
server/tripcraft/handlers/: __init__.py  auth.py  authn.py  error.py  plan.py  world.py
server/tripcraft/models/: __init__.py  __meta__.py  auth.py  base.py  plan.py  plan_user.py  user.py  world.py
server/tripcraft/queries/: __init__.py  base_query.py  plan_query.py  user_query.py  world_query.py
server/tripcraft/schemas/: __init__.py  auth.py  base.py  error.py  pagination.py  plan.py  world.py
server/tripcraft/utils/: __init__.py  db.py  jwt.py  random.py  translate.py
(+9 files in other folders)
