[tool.poetry]
name = "tripcraft"
version = "0.1.0"
description = ""
authors = ["Andy Chow <andychchow326@gmail.com>", "Emily Chan <emilychannn2002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
nanoid = "^2.0.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.7.1"}
redis = "^5.0.4"
jinja2 = "^3.1.3"
pyjwt = "^2.8.0"
cryptography = "^42.0.5"
opencc = "^1.1.7"
deep-translator = "^1.11.4"
holidays = "^0.47"


[tool.poetry.group.dev.dependencies]
black = "^24.4.1"
isort = "^5.13.2"

[tool.isort]
profile = "black"
src_paths = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
